TRV-1147 fix brand heights - citibank too small and makes it mess up

--- a/src/main/webapp/bundles/travel/less/companyLogos.less
+++ b/src/main/webapp/bundles/travel/less/companyLogos.less
@@ -17,6 +17,10 @@
   margin-bottom: 5px;
 }
 
+.logogrid > div.col-md-4 {
+	min-height: 90px;
+}
+
 .resultsContainer.v2 .unavailable .travelCompanyLogo {
 	float:left;
 	margin-right:20px;
